# gs_matterhorn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  main.cpp  qml.qrc
ground_station/: Application.cpp  Application.h  CMakeLists.txt  FileLogger.cpp  FileLogger.h  FileReader.cpp  FileReader.h  Flyable.h  GUI.cpp  General.cpp  General.h  GraphFeature.h  MainForm.ui.qml  MainWorker.cpp  MainWorker.h  PacketDispatcher.cpp  PacketDispatcher.h  ProgramConstants.h  RadioReceiver.cpp  RadioReceiver.h  UIWidget.cpp  UIWidget.h  datastructs.h  filelogger.cpp  filelogger.h  gswidget.cpp  gswidget.h  gswidget.ui  main.cpp  main.qml  qt_resources.qrc  worker.cpp  worker.h
ground_station/3D/: 3DVisualisationConstants.h  AnimatedEntity.qml  CameraController.cpp  CameraController.h  CoordinateUtils.h  GroundStation.qml  Helpers.js  Line.cpp  Line.h  Line.qml  LineEffect.qml  LineTest.qml  Marker.qml  MarkerEffect.qml  SceneRoot.qml  Terrain.qml  TerrainEffect.qml  TerrainForwardRenderer.qml  TerrainMaterial.qml  Text3D.cpp  Text3D.h  TextureManagerSingleton.h  TraceData.cpp  TraceData.h  TraceReader.cpp  TraceReader.h  TrackingText.qml  Utils.h  Wave.qml  WaveEffect.qml  WaveForwardRenderer.qml  WaveMaterial.qml  main.qml
ground_station/3D/Billboards/: FlatBillboard.cpp  FlatBillboard.h  Marker.cpp  Marker.h  Text.cpp  Text.h  Text3D.cpp  Text3D.h  Tracker.cpp  Tracker.h
ground_station/3D/ForwardRenderer/: ForwardRenderer.cpp  ForwardRenderer.h  LayerManager.h
ground_station/3D/Grid/: CompositeElevationModel.cpp  CompositeElevationModel.h  ContinuousElevationModel.cpp  ContinuousElevationModel.h  DiscreteElevationModel.cpp  DiscreteElevationModel.h  GridGeometry.cpp  GridGeometry.h  GridMesh.cpp  GridMesh.h  IDiscreteElevationModel.h
ground_station/3D/Ground/: Ground.cpp  Ground.h  GroundTile.cpp  GroundTile.h  HighlightArea.cpp  HighlightArea.h
ground_station/3D/GroundStation/: GroundStation.cpp  GroundStation.h
ground_station/3D/Interfaces/: IObservable.h
ground_station/3D/Line/: Line.cpp  Line.h
ground_station/3D/Marker/: Marker.cpp  Marker.h
ground_station/3D/Objects/: Compass.cpp  Compass.h  OpenGL3DAxes.cpp  OpenGL3DAxes.h  Ruler.cpp  Ruler.h  SplashDownPredictor.cpp  SplashDownPredictor.h  TouchdownCrosshair.cpp  TouchdownCrosshair.h
ground_station/3D/Objects/PredictionStrategies/: IPredictionStrategy.h
ground_station/3D/Scene/: RootEntity.cpp  RootEntity.h  Scene.h  WorldReference.h
ground_station/3D/Text/: Text.cpp  Text.h
ground_station/3D/models/: basic_compass.blend  basic_compass.blend1  basic_compass.mtl  compass.blend  compass.blend1  compass.mtl
ground_station/3D/shaders/: DShader.frag  highlightArea.frag  highlightArea.vert  line.frag  line.vert  marker.vert  ribbon.frag  ribbon.vert  terrain.frag  terrain.vert  terrain_notex.frag
ground_station/CRC/: CRC.h
ground_station/ConfigParser/: ConfigParser.h
ground_station/DataHandlers/: DataStreamMerger.h  IDataHandler.cpp  IDataHandler.h  IReceiver.h  ITelemetryReplayHandler.h  SensorHandler.cpp  SensorHandler.h  StateEstimator.cpp  StateEstimator.h  TelemetryHandler.cpp  TelemetryHandler.h  TelemetryReplay.cpp  TelemetryReplay.h  TelemetryReplayHandler.h  TelemetrySimulator.cpp  TelemetrySimulator.h
ground_station/DataHandlers/Receiver/: CompositeReceiver.cpp  CompositeReceiver.h  DatagramSpec.h  Decoder.cpp  Decoder.h  Factories.cpp  Factories.h  PayloadDataConverter.cpp  PayloadDataConverter.h  PayloadType.cpp  PayloadType.h  RadioReceiver.cpp  RadioReceiver.h
ground_station/DataHandlers/Replay/: ITelemetryReplayHandler.h  TelemetryReplay.cpp  TelemetryReplay.h
ground_station/DataHandlers/Sensor/: SensorHandler.h
ground_station/DataHandlers/Simulator/: TelemetrySimulator.cpp  TelemetrySimulator.h
ground_station/DataStructures/: DataStructs.cpp  Datastructs.h  ILoggable.cpp  ILoggable.h  Interval2D.h  WindData.cpp  WindData.h  datastructs.h
ground_station/Loggers/: FileLogger.cpp  FileLogger.h
ground_station/MeteoData/: meteo_payerne_test.txt
ground_station/Qt/: main.qml
ground_station/Readers/: FileReader.h
ground_station/Sensors/: ISensor.cpp  ISensor.h
ground_station/UI/: Colors.h  UIWidget.cpp  UIWidget.h  gswidget.ui
ground_station/Utilities/: ExceptionUtils.h  GraphUtils.h  MathUtils.h  ParsingUtilities.h  RandUtils.h  ReaderUtils.h  SensorUtils.h  TimeUtils.h
ground_station/data/: simulated_trajectory.csv  state.csv
gs_tests/: CMakeLists.txt  CMakeLists.txt.in
gs_tests/basic_tests/: CMakeLists.txt  DataStructuresTests.cpp  LoggingTest.cpp  ReceiverTest.cpp  SimulatorsTests.cpp  sample_test.cpp
gs_tests/decoder_tests/: CMakeLists.txt  CRC16PolyTests.cpp  CRCTests.cpp  DecoderTests.cpp  XbeeAPITests.cpp
lib/qcustomplot/: CMakeLists.txt  CMakeLists.txt.build  CMakeLists.txt.ddl
qt_tests/: AutoTest.cpp  CMakeLists.txt  ConfigParserTests.h  DummyTests.cpp  DummyTests.h  GsMainwindowTests.cpp  GsMainwindowTests.h  main.cpp
qt_tests/3DTests/: ElevationModelTests.h  GroundTests.h  IntervalTests.h  WorldReferenceTests.h
qt_tests/ReceiverTests/: CompositeReceiverTest.h  DummyReceiver.h  NewDecoderTests.h
tools/python_raw_replay/: bytes_received_900Mhz_009_1529594910849  raw_bytes_to_serial.py
